@@ -16,7 +16,7 @@
   +----------------------------------------------------------------------+
 */
 
-/* $Id: mmap.c,v 1.4 2004/01/08 08:17:59 andi Exp $ */
+/* $Id: mmap.c,v 1.5 2004/04/21 12:02:47 wez Exp $ */
 
 /* Memory Mapping interface for streams */
 #include "php.h"
@@ -31,7 +31,11 @@ PHPAPI char *_php_stream_mmap_range(php_stream *stream, size_t offset, size_t le
 	range.mode = mode;
 	range.mapped = NULL;
 
-	/* TODO: Enforce system policy and limits for mmap sizes ? */
+	/* For now, we impose an arbitrary 1MB limit to avoid
+	 * runaway swapping when large files are passed thru. */
+	if (length > 1 * 1024 * 1024) {
+		return NULL;
+	}
 	
 	if (PHP_STREAM_OPTION_RETURN_OK == php_stream_set_option(stream, PHP_STREAM_OPTION_MMAP_API, PHP_STREAM_MMAP_MAP_RANGE, &range)) {
 		if (mapped_len) {
